Fix fluid page overflow

--- a/www/style.css
+++ b/www/style.css
@@ -8,6 +8,14 @@ body {
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
   color: #555;
+  overflow-x: hidden;
+}
+
+.container-fluid {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+    margin-right:auto;
+    margin-left: auto;
 }
 
 /* Navigation Bar */
@@ -22,6 +30,10 @@ body {
 
 .navbar-default .navbar-brand {
    color: #fff;
+}
+
+.navbar {
+  margin-bottom: 0px;
 }
 
 /*---------------
@@ -107,7 +119,7 @@ section p {
 }
 
 footer {
-  padding: 50px;
+  padding: 20px;
   background: #1e9988;
   color: #fff;
 }
